--- a/src/component/news-events/NewsEventsSingle/_NewsEventsSingle.scss
+++ b/src/component/news-events/NewsEventsSingle/_NewsEventsSingle.scss
@@ -4,12 +4,25 @@
   align-items: center;
   @extend %fontS !optional;
 
+  @media screen and (min-width: 1200px) {
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+    // grid-gap: 1rem;
+    margin: 0 calc(435px / 4);
+  }
+
   h1 {
     // @extend %fontS !optional;
     font-size: 23px;
     margin: 72px auto 82px auto;
     color: #f15a22;
     text-decoration: none;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 29px;
+      font-size: 2.4rem;
+      margin-bottom: 78px;
+    }
   }
   .news-event-single {
     padding: 0 2rem;
