--- a/src/page/alumni/_Alumni.scss
+++ b/src/page/alumni/_Alumni.scss
@@ -21,6 +21,8 @@
 
       @media screen and (min-width: 1200px) {
         margin: 0 calc(435px / 2) 130px;
+        padding: 0 6rem;
+        text-align: center;
       }
     }
   }
