--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,3 +16,4 @@
 @import "../page/project-page/ProjectPage";
 @import "../component/news-events/NewsEventsIntro/NewsEventsIntro";
 @import "../component/news-events/NewsEventsSingle/NewsEventsSingle";
+@import "../page/contact/Contact";
