--- a/src/page/contact/_Contact.scss
+++ b/src/page/contact/_Contact.scss
@@ -36,6 +36,7 @@
 
   .map {
     position: relative;
+    margin: 51px 0 70vw 0;
 
     @media screen and (min-width: 1200px) {
       margin: 0;
@@ -61,7 +62,5 @@
         transform: scale(1.2, 1.4);
       }
     }
-
-    margin: 51px 0 79px 0;
   }
 }
