--- a/src/page/about-us-main/_AboutUsMain.scss
+++ b/src/page/about-us-main/_AboutUsMain.scss
@@ -179,6 +179,10 @@
       li {
         margin: 0 0 10px 0;
         padding: 0;
+        font-size: 13px;
+        @media screen and (min-width: 1200px) {
+          font-size: 1rem;
+        }
       }
     }
 
