privacy statement link, coming soon

--- a/src/component/alumni-success/_AlumniSuccess.scss
+++ b/src/component/alumni-success/_AlumniSuccess.scss
@@ -150,7 +150,10 @@
   }
 
   .alumni-name {
-    font-size: 28px;
+    // ================
+    // font-size: needs to be 28px;
+    // =================
+    font-size: 26px;
     font-family: Arial;
     font-weight: bold;
     color: #f15a22;
