--- a/src/page/projectlist-page/_ProjectListPage.scss
+++ b/src/page/projectlist-page/_ProjectListPage.scss
@@ -12,6 +12,9 @@
     flex-flow: column;
     align-items: center;
     padding: 0 2rem;
+    .project-cat-title {
+      text-decoration: none;
+    }
     h1 {
       @extend %fontS !optional;
       // font-size: 23px;
