map index to key prop

--- a/src/component/navigation/header-nav/_HeaderNav.scss
+++ b/src/component/navigation/header-nav/_HeaderNav.scss
@@ -88,7 +88,7 @@
       &:first-child {
         border-bottom: 1px solid #dedede;
         height: 100px;
-        a {
+        span {
           position: absolute;
           top: 36px;
           right: 32px;
