add faq styling

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,5 @@
 @import "../component/news-events/NewsEventsIntro/NewsEventsIntro";
 @import "../component/news-events/NewsEventsSingle/NewsEventsSingle";
 @import "../page/contact/Contact";
+@import "../page/faq/Faq";
+@import "../page/faq/FaqDeskTop";
