--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,3 +19,6 @@
 @import "../page/contact/Contact";
 @import "../page/faq/Faq";
 @import "../page/faq/FaqDeskTop";
+@import "../page/about-this-site/AboutThisSite";
+@import "../component/about-this-site-content/AboutThisSiteContent";
+@import "../component/about-this-site-content/TeamMember";
