--- a/src/page/faq/_FaqDeskTop.scss
+++ b/src/page/faq/_FaqDeskTop.scss
@@ -1,10 +1,10 @@
 .faq-desktop {
-  margin: 0 calc(435px / 4);
+  margin: 0 7.8vw;
   .faq-top {
     h1 {
       @extend %fontS !optional;
 
-      margin: 72px auto 29px;
+      margin: 3.7vw auto 1.5vw;
       font-size: 2.4rem;
       width: 71vw;
       color: #f15a22;
@@ -13,13 +13,9 @@
 
     p {
       text-align: center;
-      margin: 1rem 35px;
+      margin: 4vw 18.7vw;
       padding: 0 2rem;
-      font-size: 20px;
-    }
-
-    .note {
-      margin-top: 57px;
+      font-size: 1vw;
     }
   }
 
@@ -27,12 +23,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 170px auto 87px;
+    margin: 8.8vw auto 4.5vw;
     p {
       font-family: Helvetica, sans-serif;
       font-weight: bold;
-      font-size: 23px;
+      font-size: 1.2vw;
       width: 19%;
+      padding: 0.3vw;
+      cursor: pointer;
     }
     p.wmdd,
     p.wmdd-1,
@@ -46,15 +44,15 @@
   }
 
   .faq-wrapper {
-    margin: 1rem 35px 50px 30px;
+    margin: 0.8vw 6vw 2.6vw;
 
     h1 {
       font-family: Helvetica, sans-serif;
       font-weight: bold;
-      font-size: 34px;
+      font-size: 1.8vw;
       color: #f15a22;
       text-align: center;
-      margin-bottom: 80px;
+      margin-bottom: 4.1vw;
     }
 
     .MuiPaper-elevation1 {
@@ -71,7 +69,7 @@
       p {
         font-family: Helvetica, sans-serif;
         font-weight: bold;
-        font-size: 23px;
+        font-size: 1.2vw;
       }
     }
 
@@ -80,7 +78,7 @@
     }
 
     .MuiAccordionSummary-content {
-      margin: 2rem 0;
+      margin: 1.66vw 0;
       p {
         color: #707070;
         text-align: left;
@@ -93,7 +91,7 @@
       p,
       a {
         font-family: Helvetica, sans-serif;
-        font-size: 23px;
+        font-size: 1.2vw;
         color: #707070;
         margin: 0;
         text-align: left;
@@ -101,13 +99,13 @@
 
       a {
         display: block;
-        margin-bottom: 10px;
+        margin-bottom: 0.5vw;
         text-align: left;
       }
     }
 
     .MuiSvgIcon-root {
-      font-size: 2.5rem;
+      font-size: 2vw;
     }
   }
 }
