--- a/src/page/faq/_Faq.scss
+++ b/src/page/faq/_Faq.scss
@@ -2,6 +2,7 @@
   .faq-top {
     h1 {
       @extend %fontS !optional;
+      font-size: 5.5vw;
       margin: 17vw auto 5.5vw auto;
       width: 71vw;
       color: #f15a22;
