--- a/src/page/instructors/_Instructors.scss
+++ b/src/page/instructors/_Instructors.scss
@@ -7,7 +7,7 @@
   .instructor-top {
     margin-bottom: 65px;
     @media screen and (min-width: 1200px) {
-      margin: 47px calc(435px / 2) 83px;
+      margin: 6.8vw 23vw 4.3vw;
     }
 
     h1 {
@@ -16,6 +16,9 @@
       margin: 65px 90px 22px 90px;
       color: #f15a22;
       text-align: center;
+      @media screen and (min-width: 1200px) {
+        margin-top: 0;
+      }
     }
 
     p {
@@ -24,12 +27,16 @@
       @media screen and (min-width: 768px) {
         padding: 0 2rem;
       }
+      @media screen and (min-width: 1200px) {
+        padding: 0;
+        margin: 0;
+      }
     }
   }
 
   @media screen and (min-width: 1200px) {
     .instructor-list {
-      margin-left: 4rem;
+      margin-left: 8.5vw;
     }
   }
 }
