--- a/src/component/alumni-success/_AlumniSuccess.scss
+++ b/src/component/alumni-success/_AlumniSuccess.scss
@@ -1,16 +1,15 @@
 .alumnis-success {
   margin: 94px 33px 5rem 33px;
   text-align: center;
-  // display: flex;
-  // flex-flow: column;
-  // align-items: center;
 
   h1 {
-    // font-size: 23px;
     text-align: center;
     color: #f15a22;
     @extend %fontS !optional;
     margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 2vw;
+    }
   }
   p {
     text-align: left;
@@ -21,8 +20,15 @@
       padding: 0 2rem;
     }
     @media screen and (min-width: 1200px) {
-      width: 60vw;
-      margin: 0 auto;
+      padding: 0;
+      margin: 0 27vw;
+      text-align: center;
+    }
+  }
+
+  .swiper-container {
+    @media screen and (min-width: 1200px) {
+      margin-top: 2.5vw;
     }
   }
   .swiper-slide {
@@ -107,15 +113,15 @@
     }
 
     @media screen and (min-width: 1200px) {
-      margin: 0 calc(435px / 4 - 33px);
-
+      margin: 0 8vw;
+      padding: 3.9vw 10vw 3.9vw 12.5vw;
       grid-template-columns: 1fr 2.5fr;
     }
   }
 
   .alumni-profile-img {
     @media screen and (min-width: 1200px) {
-      width: 275px;
+      width: 18vw;
       align-self: center;
     }
   }
@@ -139,14 +145,17 @@
   .char1 {
     top: -25rem;
     left: -0.5rem;
+    @media screen and (min-width: 1200px) {
+      left: 5rem;
+    }
   }
   .char2 {
     bottom: -24rem;
     right: 0.5rem;
     transform: rotate(360deg) scale(-1, -1);
-    // @media screen and (min-width: 850px) {
-    //   top: -19.5rem;
-    // }
+    @media screen and (min-width: 1200px) {
+      right: 5rem;
+    }
   }
 
   .alumni-name {
