--- a/src/component/student-work/_StudentWork.scss
+++ b/src/component/student-work/_StudentWork.scss
@@ -11,4 +11,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
   }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 4.7vw;
+  }
 }
