--- a/src/component/student-work/student-work-intro/_StudentWorkIntro.scss
+++ b/src/component/student-work/student-work-intro/_StudentWorkIntro.scss
@@ -20,6 +20,10 @@
       margin-left: 0;
       text-align: left;
     }
+
+    @media screen and (min-width: 1200px) {
+      align-self: flex-start;
+    }
   }
 
   .intro-desc {
