--- a/src/page/instructors/instructor/_Instructor.scss
+++ b/src/page/instructors/instructor/_Instructor.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-rows: repeat(11, 1fr);
     grid-auto-flow: column;
+    margin-bottom: 7.8vw;
   }
 
   @media screen and (min-width: 1200px) {
@@ -17,6 +18,10 @@
     grid-template-columns: 1fr 4fr;
     grid-gap: 26px;
     margin: 0 25px 50px 25px;
+    @media screen and (min-width: 1200px) {
+      grid-gap: 2.3vw;
+      margin-bottom: 3.8vw;
+    }
 
     .profile-img {
       width: 16vw;
@@ -30,16 +35,27 @@
     .profile {
       display: flex;
       flex-flow: column;
+
+      @media screen and (min-width: 1200px) {
+        justify-content: center;
+      }
+
       h3 {
         font-size: 15px;
         color: #707070;
         @extend %fontB !optional;
         margin: 0;
+        @media screen and (min-width: 1200px) {
+          font-size: 1vw;
+        }
       }
       p {
         font-size: 15px;
         margin: 0;
         text-align: left;
+        @media screen and (min-width: 1200px) {
+          font-size: 1vw;
+        }
       }
     }
   }
