--- a/src/sass/main/_main.scss
+++ b/src/sass/main/_main.scss
@@ -49,12 +49,12 @@ a {
 
 @media screen and (min-width: 1200px) {
   h1 {
-    font-size: 2.4rem;
+    font-size: 2.5vw;
     margin-bottom: calc(80px / 1.5);
   }
 
   p {
-    font-size: 1rem;
+    font-size: 1vw;
   }
 
   a {
