--- a/src/component/news-events/NewsEventsIntro/_NewsEventsIntro.scss
+++ b/src/component/news-events/NewsEventsIntro/_NewsEventsIntro.scss
@@ -8,10 +8,10 @@
 
   .news-intro-top {
     @media screen and (min-width: 1200px) {
-      // display: grid;
-      // grid-template-columns: 1fr 1fr;
-      // grid-gap: 1rem;
-      margin: 0 calc(435px / 4);
+      margin: 0 8.38vw;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 2.7vw;
     }
   }
 
@@ -47,6 +47,10 @@
       color: #f15a22;
       text-align: left;
       margin: 0;
+
+      @media screen and (min-width: 1200px) {
+        font-size: 2.5vw;
+      }
     }
 
     .post-date {
