--- a/src/component/about-this-site-content/_TeamMember.scss
+++ b/src/component/about-this-site-content/_TeamMember.scss
@@ -1,17 +1,21 @@
 .meet-the-team {
-  margin-top: 8.5vw;
+  margin-top: 30vw;
   display: flex;
   flex-flow: column;
   align-items: center;
 
+  @media screen and (min-width: 1200px) {
+    margin: 5.5vw 0;
+  }
+
   h1 {
     text-align: center;
-    // font-family: Helvetica, sans-serif;
+
     @extend %fontS !optional;
-    // font-weight: bold;
+
     color: #f15a22;
     font-size: 4.6vw;
-    margin-bottom: 9vw;
+    margin-bottom: 22vw;
     @media screen and (min-width: 1200px) {
       font-size: 2.5vw;
       margin-bottom: 2.5vw;
